docs: the panel is out of early development — say so, in light
The README's "⚠️ Early development" banner pointed at a PROGRESS.md that
stopped being maintained at v0.2.212 and still announced Phase 3/4 — the
install flow — as the next milestone. A first-time reader followed the link
and concluded the panel could not yet install a game server. That was the
most misleading page in the repo.

- README: the banner becomes what is actually true — one maintainer, latest
  release supported, fixes ship forward, and links to the releases and the
  security policy. Key features caught up with the code: Kvasir and the Claude
  connector replace the old "activity digest" blurb, the built-in list is the
  five runes that really ship, app stacks, subdomains, migration/import and the
  status page get an entry, and 2FA grew passkeys and email reset.
- PROGRESS.md: rewritten as a current-state document — what is built, what is
  honestly not (multi-node, HA, adopting foreign containers, a community), the
  short backlog, and the bar for calling anything 1.0. The phase checklist is
  retired; the releases are the changelog.
- Website: the yellow early-development warning becomes a neutral project note,
  the hero gains four trust pills, and Rust/DayZ are no longer described as
  built in.
- Beacon wording was contradictory — "opt-in" in the docs index, "on by
  default" everywhere else. It is on by default and can be turned off.

Screenshots are retaken in the light theme, on a throwaway panel, framed to
match. Two things surfaced while taking them and are fixed here:

- minecraft-java: `echo "$BJSON" | jq` corrupted Paper's build JSON. dash's
  echo expands backslash escapes, and Paper puts \n inside the commit message,
  so jq saw raw control characters and the install failed with a parse error.
  Every Paper install broke whenever the newest build had a multi-line commit
  message. Now printf '%s'. Verified: Paper 26.2 downloads and installs.
- The sidebar title was clipped to 